[gd_scene load_steps=5 format=3 uid="uid://6j45bvm3jouo"]

[ext_resource type="Script" uid="uid://k74hjh0p3rer" path="res://Gamestuffs/game.gd" id="1_wmjmx"]
[ext_resource type="PackedScene" uid="uid://c87scbdosa8xd" path="res://Gamestuffs/HeadsUpDisplay/hud.tscn" id="2_ll7to"]
[ext_resource type="Script" uid="uid://8jlcqkyoirjk" path="res://Gamestuffs/Multiplayer/Multiplayer.gd" id="3_ll7to"]
[ext_resource type="Script" uid="uid://bp2c6ngrwfkbg" path="res://Gamestuffs/Multiplayer/MultiSpawner.gd" id="4_f3ii1"]

[node name="Game" type="Node2D"]
script = ExtResource("1_wmjmx")

[node name="Hud" parent="." instance=ExtResource("2_ll7to")]
z_index = 512

[node name="Multiplayer" type="Node" parent="."]
script = ExtResource("3_ll7to")
metadata/_custom_type_script = "uid://8jlcqkyoirjk"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")
script = ExtResource("4_f3ii1")

[connection signal="bye_bye" from="Multiplayer" to="." method="bye_bye"]
[connection signal="player_connected" from="Multiplayer" to="." method="_on_player_connected"]
[connection signal="player_disconnected" from="Multiplayer" to="." method="_on_player_disconnected"]
